--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -52,9 +52,10 @@
 
 - name: 拉取镜像
   shell: docker pull google/cadvisor:v0.28.3
+  when: inventory_hostname == 'hdss7-200'
 
-- name: 创建目录
-  shell: mkdir -p data/k8s-yaml/cadvisor
+- name: 创建cadvisor目录
+  shell: mkdir -p /data/k8s-yaml/cadvisor
   when: inventory_hostname == 'hdss7-200'
 
 - name: 创建cadivisor-ds.yaml文件
